# Rust-Crate

./: LICENSE  README.md
Factorial_generation/: Cargo.toml
Factorial_generation/src/: lib.rs
